# tue_recorder

./: CMakeLists.txt  package.xml
include/tue_recorder/: KinectRecorder.h  RecorderBase.h
launch/: start.launch
msg/: Start.msg
src/: KinectRecorder.cpp  RecorderBase.cpp
test/: test_amigo_kinect_recording
